2008-06-12  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-dialog.c:
	Change indentation style

	* src/hildon-note.c
	(hildon_note_button_release):
	Use root coordinates to check if the release event happened
	outside the widget.

	* src/hildon-app-menu.c
	(hildon_app_menu_button_release):
	Remove unnecessary check

	* examples/hildon-app-menu-example.c
	(button_clicked):
	Add cast to fix warning

	* src/hildon-app-menu.c
	(hildon_app_menu_class_init):
	New inner-border style property.
	Set all default spacings to 16
	(hildon_app_menu_init):
	Use vertical-spacing to set the space between filter buttons and
	regular menu buttons.
	Set the default container border using the inner-border value.

	* examples/hildon-app-menu-example.c
	(create_menu):
	Don't set the menu border explicitly, now we have the inner-border
	style property for that.

2008-06-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_init):
	Make the window modal

	* src/hildon-note.c (hildon_note_map)
	* src/hildon-app-menu.c (hildon_app_menu_map):
	Destroy the grab window if we're unable to grab the pointer

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c
	(hildon_app_menu_init, hildon_app_menu_finalize)
	(hildon_app_menu_map, hildon_app_menu_unmap)
	(hildon_app_menu_button_release)
	(grab_transfer_window_get):
	Bring back the grab window
	(hildon_app_menu_realize):
	Decorate the window, set WM hint for Matchbox

	* src/hildon-note.c (hildon_note_realize):
	* src/hildon-banner.c (hildon_banner_realize):
	Add WM hints for Matchbox

2008-06-10  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c
	(hildon_app_menu_init, hildon_app_menu_finalize)
	(hildon_app_menu_map, hildon_app_menu_unmap)
	(hildon_app_menu_button_release):
	Remove the grab window, it's not needed anymore

	* src/hildon-program.c
	Fixed typo in documentation

	* src/hildon-app-menu.h
	* src/hildon-app-menu.c
	* examples/hildon-app-menu-example.c